# sensor_communication_base_scripts

./: CMakeLists.txt  README.md
inc/: gpio.h  main.h  pwm.h  serial.h  threading.h  utils.h
inc/communication/: LegacyGpio.hpp  SafeI2C.hpp  SafeLegacyGpio.hpp  gpio.hpp  i2c.h  i2c.hpp  legacy_gpio.hpp  main.h  pwm.h  pwm.hpp  safe_i2c.hpp  serial.h  serial.hpp  utils.h  utils.hpp
main/: main.cpp
src/: LegacyGpio.cpp  SafeI2C.cpp  SafeLegacyGpio.cpp  gpio.cpp  i2c.cpp  legacy_gpio.cpp  main.cpp  pwm.cpp  safe_i2c.cpp  safe_legacy_gpio.cpp  serial.cpp  threading.cpp  utils.cpp
